--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     arrow_drop_down
                     </span>
                 <input type="time" name="hora" id="hora">
-                <button type="submit" id="button">Adiconar</button>
+                <button type="submit" id="button" onclick="acionarAlarme()" id="botão">Adiconar</button>
             </div>
         </div>
     </main>
