--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                     arrow_drop_down
                     </span>
                 <input type="time" name="hora" id="hora">
-                <button type="submit" id="button" onclick="acionarAlarme()" id="botão">Adiconar</button>
+                <audio src="src/Audio/alarm-clock.mp3" id="audio"></audio>
+                <button type="submit" id="button" id="botão">Ativar</button>
             </div>
         </div>
     </main>
